# TGbot_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
TGbotCpp/: TGbot.cpp  TGbot.hpp
TGbotCpp/curl/: receive.cpp  receive.hpp
TGbotCpp/samples/: main.cpp
TGbot_cpp/: TGbot.cpp  TGbot.hpp
TGbot_cpp/curl/: receive.cpp  receive.hpp
TGbot_cpp/samples/get a message/: main.txt
